added   queue aka {shared buffer }  defination

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(
-    SRCS "timers.cpp" "../headers/tim.cpp" "../gpio/gpio.cpp" # Source files for the main component
-    INCLUDE_DIRS "../headers/include" "../gpio/include" "." # Path to the header files
+    SRCS "timers.cpp" "../headers/tim.cpp" "../queues/queues.cpp" "../gpio/gpio.cpp" # Source files for the main component
+    INCLUDE_DIRS "../headers/include" "../queues/include" "../gpio/include" "." # Path to the header files
 )
